--- a/CYaPass/Base.lproj/Main.storyboard
+++ b/CYaPass/Base.lproj/Main.storyboard
@@ -106,6 +106,9 @@
                                         <constraints>
                                             <constraint firstAttribute="width" constant="40" id="e9d-gC-4gd"/>
                                         </constraints>
+                                        <connections>
+                                            <action selector="ShowPasswordSwitchChanged:" destination="9pv-A4-QxB" eventType="valueChanged" id="BAe-jF-p30"/>
+                                        </connections>
                                     </switch>
                                 </subviews>
                                 <constraints>
@@ -138,6 +141,7 @@
                     <connections>
                         <outlet property="ClearGridButton" destination="4xs-65-YDB" id="wNS-4h-ild"/>
                         <outlet property="HashLabelOutlet" destination="A5M-7J-77L" id="Rmp-58-vU0"/>
+                        <outlet property="ShowPasswordSwitch" destination="Frz-Zv-NPb" id="KeP-um-l3Q"/>
                         <outlet property="SiteKeyPicker" destination="Flh-F5-NCd" id="kBU-5x-ib1"/>
                         <outlet property="TopGridView" destination="yrl-9S-DHQ" id="25z-re-gNQ"/>
                     </connections>
